# nocap-backend

./: README.md  pyproject.toml  run_api.py
src/veritas_fact_check_api/: api.py  crew.py  main.py
src/veritas_fact_check_api/config/: agents.yaml  tasks.yaml
